fixing some spacing issues and readmen

--- a/src/scss/header/navbar.scss
+++ b/src/scss/header/navbar.scss
@@ -8,8 +8,8 @@
 }
 
 .navbar-form > .form-group {
-    padding-top:12px !important;
-    padding-bottom:12px !important;
+    padding-top:11px !important;
+    padding-bottom:11px !important;
 }
 
 .navbar-default .navbar-nav>li>a {
